# trackstack

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
apps/desktop/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/desktop/app/: _types.ts  error.tsx  layout.tsx  page.tsx
apps/desktop/app/_components/: LoginView.tsx  PullView.tsx  StagingArea.tsx  WaveformBars.tsx  WelcomeView.tsx
apps/desktop/lib/: commitPipeline.ts  pullPipeline.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  parser.rs
apps/web/: middleware.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/audio-url/: route.ts
apps/web/app/dashboard/: layout.tsx  loading.tsx  page.tsx
apps/web/app/dashboard/[projectId]/: loading.tsx  not-found.tsx  page.tsx
apps/web/app/dashboard/_components/: PlayableAudioFile.tsx  Sidebar.tsx  SignOutButton.tsx  TimelineThumbnail.tsx  TopBar.tsx
apps/web/app/dashboard/activity/: page.tsx
apps/web/app/dashboard/projects/: page.tsx
apps/web/app/dashboard/projects/[projectId]/: loading.tsx  not-found.tsx  page.tsx
apps/web/app/dashboard/projects/_components/: ProjectsList.tsx
apps/web/app/dashboard/settings/: page.tsx
apps/web/app/dashboard/settings/_components/: ProfileForm.tsx
apps/web/app/login/: page.tsx
apps/web/app/signup/: page.tsx
apps/web/lib/supabase/: browser.ts  server.ts
(+7 files in other folders)
