[package]
name = "trackstack-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "trackstack_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
quick-xml = "0.36"
sha2 = "0.10"
tauri-plugin-dialog = "2"
